# future-of-work-data

./: .gitignore  README.md  get_schema.py  pyproject.toml  requirements.txt  setup_repo.sh
data/derived/: ine_dirce_empresas_filtered.parquet  isco_hierarchy.parquet
data/duckdb/: esco_dataset_1.2.0_schema.md  onet_dataset_29.2_schema.md
data/processed/datamarket/: job_offers_aggregated_by_occupation.parquet  uk_job_offers_enriched.parquet
data/processed/esco/: esco_occupation_profiles.parquet
data/processed/ine_dirce/: ine_dirce_aggregated_by_activity.parquet
data/processed/onet/: onet_occupations_aggregated.parquet
data/raw/OEWS/: readme.md  stem_2024.xlsx
data/raw/datamarket/: datamarket_job_offers_victoriano.csv
data/raw/esco/1.2.0/: ISCOGroups_en.csv  broaderRelationsOccPillar_en.csv  broaderRelationsSkillPillar_en.csv  conceptSchemes_en.csv  digCompSkillsCollection_en.csv  (+10 more)
data/raw/ine-dirce/: readme file dirce.txt
data/raw/ine_dirce/: nace_rev2.csv
data/raw/jrc_publication/: readme file jrc.txt  tasks eu isco2d nace2d EU15.csv
data/raw/us_census_bureau/: readme.md  us_6digitnaics_rcptsize_2022.xlsx
scripts/: aggregate_ine_dirce.py  aggregate_job_offers.py  aggregate_onet.py  check_duplicates.py  create_isco_hierarchy.py  enrich_uk_job_offers.py  esco_occupations.py  process_alternative_names.py  transform_ine_dirce.py
sql/esco/: occupation_profile_view.sql  top_tech_skills.sql
sql/onet/: future_skills_demand.sql
sql/views/: skills_crosswalk_analysis.py
src/etl/: convert_esco_to_duckdb.py  convert_onet_to_duckdb.py
src/utils/: db.py
(+2 files in other folders)
