[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "future-of-work-data"
version = "0.1.0"
description = "Data analysis tools for ESCO and O*NET datasets for future of work research"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "duckdb>=1.2.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
]

[tool.setuptools]
packages = ["src"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
